style.css
body {
	background-color: #fff;
	background-image: url(images/wiki-bg.jpg);
	background-repeat: repeat-x;
	background-position: center 80px;
	color: #222;
	padding-top: 128px;
}

body.page-Main_Page .page-header,
body.page-Category_Oracle .page-header,
body.page-Category_JavaScript .page-header,
body.page-Category_HTML .page-header,
body.page-Category_PHP .page-header,
body.page-Category_PL_SQL .page-header,
body.page-Category_CSS .page-header { display: none; }

textarea {
	width: 95%;
}

.category-links {
	clear: both;
}

.mw-headline {
	margin-top: -128px;
	padding-top: 128px;
	text-shadow: 1px 1px 0 rgb(255,255,255);
}

h2 .mw-headline { font-size: 18px; }
h3 .mw-headline { font-size: 16px; }
h4 .mw-headline { font-size: 14px; }
h5 .mw-headline { font-size: 12px; }
h6 .mw-headline { font-size: 12px; }

p {
	margin-bottom: 15px;
}

.mw-content-ltr ul, .mw-content-ltr ol {
	margin-bottom: 9px;;
}

.navbar-brand img {
	margin-right: 0.5em;
	max-height: 30px;
}

.navbar input {
	background-color: #555;
	border-color: #111;
	color: #aaa;
	margin-bottom: 0;
}

.navbar .navbar-inner .btn {
	margin-top: 0;
}

.nav > li > a {
	padding: 15px;
}

.editsection {
	float: right;
	font-size: 0.8rem;
	opacity: 0.2;
}

.editOptions .checkbox input:first-child {
	margin-left: -20px;
}

.jumbotron {
	position: relative;
}

.jumbotron h1 img {
	border: 1px solid #eee;
	-webkit-box-shadow: 0 0 5px rgba( 0, 0, 0, 0.3 );
	-moz-box-shadow: 0 0 5px rgba( 0, 0, 0, 0.3 );
	box-shadow: 0 0 5px rgba( 0, 0, 0, 0.3 );
	position: relative;
	top: -6px;
}

.jumbotron .nav-pills {
	opacity: 0.2;
	position: absolute;
	top: 10px;
	right: 10px;
}

.jumbotron .nav-pills:hover {
	opacity: 0.8;
}

h2:hover .editsection,
h3:hover .editsection,
h4:hover .editsection,
h5:hover .editsection,
h6:hover .editsection {
	opacity: 1;
}

option.unclickable {
	color: #ccc;
}

#subnav-select {
	display: none;
}

.nav .user-icon {
	border: 1px solid rgba( 55, 55, 55, 0.1 );
	display: inline-block;
	margin-right: 0.5em;
	vertical-align: middle;
	width: 20px;
	height: 20px;
}

.nav .user-icon img {
	border: 1px solid rgba( 0, 0, 0, 0.5 );
	width: 20px;
	height: 20px;
}

#wiki-body h2 {
	border-bottom: 1px solid #ddd;
	margin-bottom: 0.5em;
}

#wiki-body h3 {
	border-bottom: 1px dotted #eee;
	color: #555;
	margin-bottom: 0.5em;
}

#wiki-body li {
	margin-bottom: 5px;
}

#page-contents ul li { list-style: none; }
#page-contents .dropdown-menu {
	left: auto;
	max-height: 400px;
	overflow: scroll;
	overflow-y: scroll;
	right: 0;
}
#page-contents .dropdown-menu {
}

.page-header .nav i {
	opacity: 0.3;
}

.nav-collapse.in {
	height: auto !important;
}

#toc:not(.toc-sidebar) {
	display: none;
	float: right;
	margin: 0 0 1em 1em;
}

#toc td {
	background: #eee;
	border: 1px solid #ddd;
	border-radius: 0.5em;
	display: block;
	-moz-border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	padding: 0 1em 1em 1em;

	box-shadow: 0 0 5px 0 rgba( 0, 0, 0, 0.2 );
}

#toc.toc-sidebar td {
	background: transparent;
	border: none;
	box-shadow: none;
	display: table-cell;
	padding: 0;
}

#toc.toc-sidebar li {
	line-height: 20px;
	list-style-type: none;
}

#toc.toc-sidebar li li {
	margin-left: 20px;
}

#toc.toc-sidebar h3 {
	font-size: 1em;
}

.toc-sidebar .toctoggle {
	display: none;
}

#toctitle h2 {
	font-size: 16px;
}

a.new {
	color: #86100f;
}

#catlinks {
	border-top: 1px dotted #eee;
	margin-top: 2em;
	padding: 1em 0;
}

#catlinks #mw-normal-catlinks > a {
	color: #999;
}

#catlinks li {
	border-left: 1px solid #ddd;
}

#catlinks li:first-child {
	border-left: none;
}

.bottom {
	background: #f5f5f5;
	margin-top: 1em;
	padding-bottom: 2em;
	padding-top: 2em;
}

.bottom .mw-editsection {
	display: none;
}

.bottom footer {
	color: #999;
	margin-top: 2em;
}

.printfooter { display: none;}

/* thumb, copied from vector */
div.thumb {
	margin-bottom: .5em;
	width: auto;
	background-color: transparent;
}
div.thumbinner {
	border: 1px solid #ccc;
	padding: 3px !important;
	background-color: #f9f9f9;
	font-size: 94%;
	text-align: center;
	overflow: hidden;
}
html .thumbimage {
	border: 1px solid #ccc;
}
html .thumbcaption {
	border: none;
	text-align: left;
	line-height: 1.4em;
	padding: 3px !important;
	font-size: 94%;
}
div.magnify {
	float: right;
	border: none !important;
	background: none !important;
}
div.magnify a, div.magnify img {
	display: block;
	border: none !important;
	background: none !important;
}
/* @noflip */
div.tright {
	clear: right;
	float: right;
	margin: .5em 0 1.3em 1.4em;
}
/* @noflip */
div.tleft {
	float: left;
	clear: left;
	margin: .5em 1.4em 1.3em 0;
}
img.thumbborder {
	border: 1px solid #dddddd;
}

.brand img {
	margin-top: -5px;
	display: inline-block;
	vertical-align: middle;
}

.navbar-fixed-top .navbar-inner {
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
}

.navbar input {
	background-color: #f5f5f5;
	border-color: #ccc;
	color: #333;
}

/* Subnav */
.subnav {
	background: #eee;
	border-bottom: 1px solid #f5f5f5;
  width: 100%;
  height: 50;
	margin-top: 2px;
	-webkit-box-shadow: 0 1px 10px rgba(0,0,0,0.1);
	   -moz-box-shadow: 0 1px 10px rgba(0,0,0,0.1);
	        box-shadow: 0 1px 10px rgba(0,0,0,0.1);
	border-color: #d5d5d5;
	border-width: 0 0 1px;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}

@media (max-width: 767px) {
	body {
		padding-left: 0;
		padding-right: 0;
		padding-top: 59px;
	}

	.bottom,
	#wiki-outer-body {
		padding-left: 20px;
		padding-right: 20px;
	}

	.navbar {
		margin-left: 0;
		margin-right: 0;
	}
}

@media (max-width: 979px) {
	body {
		padding-top: 59px;
	}

	#wiki-outer-body {
		margin-top: 10px;
	}
}

.subnav .container .nav {
  margin-bottom: 0;
}
/* ... */

